sandbox/output
HikerTest.java:8: error: method add in class StringCalculator cannot be applied to given types;
        int actual = new StringCalculator().add("");
                                           ^
  required: no arguments
  found: String
  reason: actual and formal argument lists differ in length
1 error
